# personal-chat-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.md
.claude/: settings.local.json
.claude/agents/: design-system-extractor.md
.claude/commands/: bug.md  commit.md  extract-design.md  feature.md  implement.md  prime.md  recommend.md  remind.md  research.md  spec-move.md  spec-report.md  tool-bug.md  tool-plan.md  tool-update.md  worktree-supabase-setup.md  worktree-supabase-teardown.md
.claude/commands/_old/: bug.md  create-tool.md  feature.md  research.md  update-tool.md
docs/: LEARNING_GUIDE.md
portfolio_bot/: __init__.py
portfolio_bot/api/: __init__.py  main.py
portfolio_bot/api/routes/: __init__.py  chat.py
portfolio_bot/api/static/: app.js  index.html  styles.css
portfolio_bot/configs/: __init__.py  app_config.py
portfolio_bot/core/: __init__.py  chain.py  graph.py  llm.py  state.py  vectorstore.py
portfolio_bot/core/agents/: __init__.py  response_agent.py  retriever.py  router.py  tool_agent.py
portfolio_bot/core/prompts/: __init__.py  response.py  router.py
portfolio_bot/core/tools/: __init__.py
portfolio_bot/data/: portfolio.md
portfolio_bot/logs/: __init__.py  logger.py
portfolio_bot/services/: __init__.py  chat_service.py
scripts/: ingest_documents.py  visualize_graph.py
tests/: __init__.py
